client/landing/jetpack-cloud/sections/backups/style.scss
.backups__page {
	.filterbar .filterbar__wrap.card {
		display: flex;
	}
	.main {
		padding-bottom: 0;
	}
}

.backups__last-backup-status {
	background: var( --studio-white );
	padding: 16px 16px 0;

	@include breakpoint( '>660px' ) {
		background: var( --color-surface-backdrop );
		padding: 0;
		margin: 0;
	}
}
.main {
	overflow-y: auto;
}
.backups__main-wrap {
	display: flex;
	flex-direction: column;
	height: calc( 100vh - 120px );
	margin-left: -16px;
	margin-right: -16px;

	div:last-child {
		flex-grow: 1;
	}
	@include breakpoint( '>660px' ) {
		height: auto;
	}
}

.backups__search {
	padding: 0 1rem;
}

.backups__search-header {
	font-size: 1.3rem;
	font-weight: 400;
	margin-top: 2rem;
	margin-bottom: 0.5rem;
}

.backups__search-description {
	margin-bottom: 2rem;
}

.backups__is-loading {
	margin: 2rem 1rem;
	height: 245px;
	@include placeholder( --color-neutral-10 );
}

